--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -4,6 +4,8 @@
     top: 11px;
     font-size: 30px;
     text-align: left;
+    margin-bottom: 17px;
+    z-index: -1;
 }
 
 .places article {
